# chess-engine-c

./: .gitignore  CMakeLists.txt  README.md
include/: main.h
src/: main.c
